attached_assets/Pasted--2025-05-19-01-12-50-0000-325-INFO-Handling-signal-winch-2025-05-19-01-12-50-0000-336-E-1747617244800.txt
[2025-05-19 01:12:50 +0000] [325] [INFO] Handling signal: winch
[2025-05-19 01:12:50 +0000] [336] [ERROR] expected an indented block after 'with' statement on line 83 (file_storage.py, line 85)
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/workspace/main.py", line 2, in <module>
    import routes  # noqa: F401
    ^^^^^^^^^^^^^
  File "/home/runner/workspace/routes.py", line 13, in <module>
    from utils.file_storage import save_uploaded_file, generate_unique_filename, create_download_package
  File "/home/runner/workspace/utils/file_storage.py", line 85
    def copy_css_to_hosted(css_file_path, hosted_css_filename):
IndentationError: expected an indented block after 'with' statement on line 83
[2025-05-19 01:12:50 +0000] [325] [INFO] Handling signal: winch
[2025-05-19 01:12:50 +0000] [325] [INFO] Handling signal: winch
[2025-05-19 01:13:21 +0000] [325] [INFO] Handling signal: winch
[2025-05-19 01:13:21 +0000] [325] [INFO] Handling signal: winch
[2025-05-19 01:13:22 +0000] [325] [INFO] Handling signal: winch